--- a/SpringDemo/service/pom.xml
+++ b/SpringDemo/service/pom.xml
@@ -3,13 +3,19 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <parent>
-        <artifactId>study</artifactId>
+        <artifactId>SpringDemo</artifactId>
         <groupId>com.dolan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>service</artifactId>
+    <groupId>com.dolan</groupId>
+    <version>1.0-SNAPSHOT</version>
 
+    <properties>
+        <jdk.version>1.8</jdk.version>
+        <spring.version>4.3.1.RELEASE</spring.version>
+    </properties>
 
 </project>
