--- a/SpringDemo/web/pom.xml
+++ b/SpringDemo/web/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <parent>
-        <artifactId>study</artifactId>
+        <artifactId>SpringDemo</artifactId>
         <groupId>com.dolan</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
@@ -11,15 +11,13 @@
     <name>web Maven Webapp</name>
     <url>http://maven.apache.org</url>
 
+    <properties>
+        <jdk.version>1.8</jdk.version>
+        <spring.version>4.3.1.RELEASE</spring.version>
+    </properties>
 
     <!--项目依赖 -->
     <dependencies>
-        <dependency>
-            <groupId>org.slf4j</groupId>
-            <artifactId>slf4j-log4j12</artifactId>
-            <version>1.7.21</version>
-        </dependency>
-
         <!--j2ee相关包 servlet、jsp、jstl-->
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -48,12 +46,12 @@
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
-            <version>4.3.1.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-webmvc</artifactId>
-            <version>4.3.1.RELEASE</version>
+            <version>${spring.version}</version>
         </dependency>
 
         <!--其他需要的包-->
@@ -66,6 +64,13 @@
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.3.1</version>
+        </dependency>
+
+
+        <dependency>
+            <artifactId>service</artifactId>
+            <groupId>com.dolan</groupId>
+            <version>1.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
