Dockerfile from dolanfony

--- a/Web/SpringBootDockerDemo/Dockerfile
+++ b/Web/SpringBootDockerDemo/Dockerfile
@@ -1,4 +1,4 @@
-FROM daocloud.io/dolan/tomcat8-maven3-ali:latest
+FROM dolanfony/tomcat8-maven3-ali:latest
 
 ADD pom.xml /tmp/build/
 RUN cd /tmp/build && mvn -q dependency:resolve
