--- a/Web/SpringBootDockerDemo/pom.xml
+++ b/Web/SpringBootDockerDemo/pom.xml
@@ -8,7 +8,7 @@
   <name>SpringBootDockerDemo Maven Webapp</name>
   <url>http://maven.apache.org</url>
   
-  <parent>
+   <parent>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-parent</artifactId>
 		<version>1.5.2.RELEASE</version>
@@ -27,7 +27,11 @@
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-web</artifactId>
 	</dependency>
-	
+    <dependency>
+        <groupId>com.jayway.jsonpath</groupId>
+        <artifactId>json-path</artifactId>
+        <scope>test</scope>
+    </dependency>
 	<dependency>
 		<groupId>org.springframework.boot</groupId>
 		<artifactId>spring-boot-starter-test</artifactId>
