--- a/Web/SpringBootDockerDemo/src/main/resources/application.properties
+++ b/Web/SpringBootDockerDemo/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.host=mongodb
+spring.data.mongodb.host=192.168.99.100
 spring.data.mongodb.port=27017
 spring.data.mongodb.database=docker-demo-java-mongo
 spring.data.mongodb.repositories.enabled=true 
